// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: OptionGroup default snapshot 1`] = `
.emotion-1 {
  outline: none;
  position: relative;
}

.emotion-0 {
  font-weight: 400;
  color: #101721;
  font-size: 14px;
  line-height: 10px;
  cursor: pointer;
  padding: 0 18px;
  position: relative;
  z-index: 999;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: initial;
  -ms-flex-line-pack: initial;
  align-content: initial;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 52px;
}

.emotion-0:last-of-type {
  border: 0;
}

.emotion-0:hover {
  background-color: #F7F7F9;
}

.emotion-24 {
  background-color: #ffffff;
  border-radius: 3px;
  position: relative;
  width: inherit;
  z-index: 9;
  max-height: 352px;
  min-width: 200px;
  overflow-y: auto;
  padding: 20px 1px;
}

<div
  className="emotion-24"
  style={
    Object {
      "paddingTop": undefined,
    }
  }
>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
      style={
        Object {
          "alignContent": "initial",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      Option 0
       
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
      style={
        Object {
          "alignContent": "initial",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      Option 1
       
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
      style={
        Object {
          "alignContent": "initial",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      Option 2
       
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
      style={
        Object {
          "alignContent": "initial",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      Option 3
       
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
      style={
        Object {
          "alignContent": "initial",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      Option 4
       
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
      style={
        Object {
          "alignContent": "initial",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      Option 5
       
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
      style={
        Object {
          "alignContent": "initial",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      Option 6
       
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
      style={
        Object {
          "alignContent": "initial",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      Option 7
       
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
      style={
        Object {
          "alignContent": "initial",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      Option 8
       
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
      style={
        Object {
          "alignContent": "initial",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      Option 9
       
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
      style={
        Object {
          "alignContent": "initial",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      Option 10
       
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
  </div>
  <div
    aria-checked={false}
    className="emotion-1"
    onClick={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="emotion-0"
      style={
        Object {
          "alignContent": "initial",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      Option 11
       
      <canvas
        height={0}
        onDragOver={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderRadius": "inherit",
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        width={0}
      />
    </div>
  </div>
</div>
`;

exports[`Component: OptionGroup multi option group 1`] = `
Array [
  .emotion-2 {
  border-radius: 3px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
}

.emotion-2 > i {
  margin-right: 10px;
  font-size: 12px;
}

.emotion-2.__pebble__search__small {
  background-color: #F7F7F9;
}

.emotion-2.__pebble__search__large {
  background-color: #ffffff;
  height: 76px;
  padding: 0 25px;
  box-shadow: 0 2px 7px 0 #F2F2F2;
}

.emotion-2.__pebble__search__table {
  border: 1px solid #E0E0E0;
  background-color: #ffffff;
}

.emotion-2.__pebble__search__table i {
  color: #6B7785;
}

.emotion-0 {
  border-radius: 3px;
  outline: none;
  border: 0;
  height: inherit;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-weight: 400;
  color: #101721;
  font-size: 12px;
  background-color: transparent;
}

.emotion-0::-webkit-input-placeholder {
  color: #9FA6B0;
}

.emotion-0::-moz-placeholder {
  color: #9FA6B0;
}

.emotion-0:-ms-input-placeholder {
  color: #9FA6B0;
}

.emotion-0:-moz-placeholder {
  color: #9FA6B0;
}

.emotion-0::-webkit-input-placeholder {
  color: #9FA6B0;
}

.emotion-0::-moz-placeholder {
  color: #9FA6B0;
}

.emotion-0:-ms-input-placeholder {
  color: #9FA6B0;
}

.emotion-0::placeholder {
  color: #9FA6B0;
}

.emotion-1 {
  display: table;
  height: 16px;
  width: 16px;
  background-color: #E0E0E0;
  font-size: 6px;
  border-radius: 16px;
  text-align: center;
  cursor: pointer;
  pointer-events: none;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  opacity: 0;
}

.emotion-1.__display {
  opacity: 1;
  pointer-events: unset;
}

.emotion-3 {
  padding: 20px;
  box-shadow: none;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  z-index: 10;
  will-change: padding;
  position: absolute;
  top: 0;
  background: white;
  width: 100%;
  box-sizing: border-box;
}

<div
    className="emotion-3"
  >
    <div
      className="emotion-2 __pebble__search__small"
    >
      <i
        className="pi pi-search"
      />
      <input
        aria-label="Search"
        className="emotion-0"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <div
        className="emotion-1"
        onClick={[Function]}
      >
        <i
          className="pi pi-close"
          style={
            Object {
              "display": "table-cell",
              "verticalAlign": "middle",
            }
          }
        />
      </div>
    </div>
  </div>,
  .emotion-1 {
  outline: none;
  position: relative;
}

.emotion-0 {
  font-weight: 400;
  color: #101721;
  font-size: 14px;
  line-height: 10px;
  cursor: pointer;
  padding: 0 18px;
  position: relative;
  z-index: 999;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: initial;
  -ms-flex-line-pack: initial;
  align-content: initial;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 52px;
}

.emotion-0:last-of-type {
  border: 0;
}

.emotion-0:hover {
  background-color: #F7F7F9;
}

.emotion-24 {
  background-color: #ffffff;
  border-radius: 3px;
  position: relative;
  width: inherit;
  z-index: 9;
  max-height: 352px;
  min-width: 200px;
  overflow-y: auto;
  padding: 20px 1px;
}

<div
    className="emotion-24"
    style={
      Object {
        "paddingTop": 80,
      }
    }
  >
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 0
         
        <i
          className="pi pi-checkbox-unselected"
          style={
            Object {
              "color": "#E0E0E0",
            }
          }
        />
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 1
         
        <i
          className="pi pi-checkbox-unselected"
          style={
            Object {
              "color": "#E0E0E0",
            }
          }
        />
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 2
         
        <i
          className="pi pi-checkbox-unselected"
          style={
            Object {
              "color": "#E0E0E0",
            }
          }
        />
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 3
         
        <i
          className="pi pi-checkbox-unselected"
          style={
            Object {
              "color": "#E0E0E0",
            }
          }
        />
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 4
         
        <i
          className="pi pi-checkbox-unselected"
          style={
            Object {
              "color": "#E0E0E0",
            }
          }
        />
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 5
         
        <i
          className="pi pi-checkbox-unselected"
          style={
            Object {
              "color": "#E0E0E0",
            }
          }
        />
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 6
         
        <i
          className="pi pi-checkbox-unselected"
          style={
            Object {
              "color": "#E0E0E0",
            }
          }
        />
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 7
         
        <i
          className="pi pi-checkbox-unselected"
          style={
            Object {
              "color": "#E0E0E0",
            }
          }
        />
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 8
         
        <i
          className="pi pi-checkbox-unselected"
          style={
            Object {
              "color": "#E0E0E0",
            }
          }
        />
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 9
         
        <i
          className="pi pi-checkbox-unselected"
          style={
            Object {
              "color": "#E0E0E0",
            }
          }
        />
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 10
         
        <i
          className="pi pi-checkbox-unselected"
          style={
            Object {
              "color": "#E0E0E0",
            }
          }
        />
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="checkbox"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 11
         
        <i
          className="pi pi-checkbox-unselected"
          style={
            Object {
              "color": "#E0E0E0",
            }
          }
        />
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Component: OptionGroup with searchbox 1`] = `
Array [
  .emotion-2 {
  border-radius: 3px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
}

.emotion-2 > i {
  margin-right: 10px;
  font-size: 12px;
}

.emotion-2.__pebble__search__small {
  background-color: #F7F7F9;
}

.emotion-2.__pebble__search__large {
  background-color: #ffffff;
  height: 76px;
  padding: 0 25px;
  box-shadow: 0 2px 7px 0 #F2F2F2;
}

.emotion-2.__pebble__search__table {
  border: 1px solid #E0E0E0;
  background-color: #ffffff;
}

.emotion-2.__pebble__search__table i {
  color: #6B7785;
}

.emotion-0 {
  border-radius: 3px;
  outline: none;
  border: 0;
  height: inherit;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-weight: 400;
  color: #101721;
  font-size: 12px;
  background-color: transparent;
}

.emotion-0::-webkit-input-placeholder {
  color: #9FA6B0;
}

.emotion-0::-moz-placeholder {
  color: #9FA6B0;
}

.emotion-0:-ms-input-placeholder {
  color: #9FA6B0;
}

.emotion-0:-moz-placeholder {
  color: #9FA6B0;
}

.emotion-0::-webkit-input-placeholder {
  color: #9FA6B0;
}

.emotion-0::-moz-placeholder {
  color: #9FA6B0;
}

.emotion-0:-ms-input-placeholder {
  color: #9FA6B0;
}

.emotion-0::placeholder {
  color: #9FA6B0;
}

.emotion-1 {
  display: table;
  height: 16px;
  width: 16px;
  background-color: #E0E0E0;
  font-size: 6px;
  border-radius: 16px;
  text-align: center;
  cursor: pointer;
  pointer-events: none;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  opacity: 0;
}

.emotion-1.__display {
  opacity: 1;
  pointer-events: unset;
}

.emotion-3 {
  padding: 20px;
  box-shadow: none;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  z-index: 10;
  will-change: padding;
  position: absolute;
  top: 0;
  background: white;
  width: 100%;
  box-sizing: border-box;
}

<div
    className="emotion-3"
  >
    <div
      className="emotion-2 __pebble__search__small"
    >
      <i
        className="pi pi-search"
      />
      <input
        aria-label="Search"
        className="emotion-0"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <div
        className="emotion-1"
        onClick={[Function]}
      >
        <i
          className="pi pi-close"
          style={
            Object {
              "display": "table-cell",
              "verticalAlign": "middle",
            }
          }
        />
      </div>
    </div>
  </div>,
  .emotion-1 {
  outline: none;
  position: relative;
}

.emotion-0 {
  font-weight: 400;
  color: #101721;
  font-size: 14px;
  line-height: 10px;
  cursor: pointer;
  padding: 0 18px;
  position: relative;
  z-index: 999;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: initial;
  -ms-flex-line-pack: initial;
  align-content: initial;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 52px;
}

.emotion-0:last-of-type {
  border: 0;
}

.emotion-0:hover {
  background-color: #F7F7F9;
}

.emotion-24 {
  background-color: #ffffff;
  border-radius: 3px;
  position: relative;
  width: inherit;
  z-index: 9;
  max-height: 352px;
  min-width: 200px;
  overflow-y: auto;
  padding: 20px 1px;
}

<div
    className="emotion-24"
    style={
      Object {
        "paddingTop": 80,
      }
    }
  >
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 0
         
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 1
         
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 2
         
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 3
         
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 4
         
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 5
         
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 6
         
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 7
         
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 8
         
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 9
         
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 10
         
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
    <div
      aria-checked={false}
      className="emotion-1"
      onClick={[Function]}
      role="radio"
      tabIndex={-1}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "alignContent": "initial",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        Option 11
         
        <canvas
          height={0}
          onDragOver={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderRadius": "inherit",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          width={0}
        />
      </div>
    </div>
  </div>,
]
`;
